# ViciOnlineSDL2

./: .clangd.in  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  ViciOnlineSDL2.sln  _build.bat  build.py  readme.md  vcpkg.json
ViciClient/: AbstractPlayerJSWrapper.cpp  AbstractPlayerJSWrapper.hpp  Animation.cpp  Animation.hpp  AssetManager.cpp  AssetManager.h  AssetManager.hpp  Camera.cpp  Camera.hpp  CaseInsensitiveComparator.cpp  CaseInsensitiveComparator.hpp  ClientPlayer.cpp  ClientPlayer.hpp  ClientPlayerJSWrapper.cpp  ClientPlayerJSWrapper.hpp  ClientPlayerManager.cpp  ClientPlayerManager.hpp  ClientScriptLoader.cpp  ClientScriptLoader.hpp  Entities.cpp  Entities.h  EntityAnimated.cpp  EntityAnimated.hpp  EntityDrawable.cpp  EntityDrawable.h  EntityDrawable.hpp  EntityTexture.cpp  EntityTexture.hpp  Font_ApplestormChalkboard.h  Frame.cpp  Frame.hpp  FrameDirection.cpp  GameScene.cpp  GameScene.h  GameScene.hpp  Gottimation.cpp  Gottimation.hpp  KeyboardInputHandler.cpp  KeyboardInputHandler.h  KeyboardInputHandler.hpp  (+73 more)
ViciClient/files/: registerScene.html
ViciClient/include/: Camera.hpp  TimeManager.hpp  ViciClient.hpp
ViciClient/include/Animations/: Animation.hpp  Frame.hpp  FrameDirection.hpp  GottanisFileLoader.hpp  GottanisSDL2Renderer.hpp  Gottimation.hpp  IAnimation.hpp
ViciClient/include/AssetTypes/: Texture.hpp
ViciClient/include/Entities/: ClientPlayer.hpp  EntityAnimated.hpp  EntityDrawable.hpp  EntityTexture.hpp  NetworkedPlayer.hpp
ViciClient/include/GUI/: RmlUi_FileInterface.h  RmlUi_Platform_SDL.h  RmlUi_Renderer_SDL.h  ViciGuiHost.hpp
ViciClient/include/Handlers/: KeyboardInputHandler.hpp  MouseInputHandler.hpp
ViciClient/include/JSRuntime/: AbstractPlayerJSWrapper.hpp  ClientPlayerJSWrapper.hpp  ClientScriptLoader.hpp  NetworkedPlayerJSWrapper.hpp
ViciClient/include/Levels/: Level.hpp  MapLevel.hpp  SingleLevel.hpp
ViciClient/include/Networking/: AssetManager.hpp  ClientPlayerManager.hpp  LevelWatchingManager.hpp  NetworkAsset.hpp  UdpChannelMap.hpp  UdpClient.hpp
ViciClient/include/Scenes/: GameScene.hpp  LoginScene.hpp  Scene.hpp  SceneManager.hpp
ViciClient/src/: Camera.cpp  PlayerInfo.cpp  ViciClient.cpp  main.cpp
ViciClient/src/Animations/: Animation.cpp  Frame.cpp  FrameDirection.cpp  GottanisFileLoader.cpp  GottanisSDL2Renderer.cpp  Gottimation.cpp
ViciClient/src/AssetTypes/: Texture.cpp
ViciClient/src/Comparators/: CaseInsensitiveComparator.cpp
ViciClient/src/Entities/: ClientPlayer.cpp  EntityAnimated.cpp  EntityDrawable.cpp  EntityTexture.cpp  NetworkedPlayer.cpp
ViciClient/src/GUI/: RmlUi_FileInterface.cpp  RmlUi_Platform_SDL.cpp  RmlUi_Renderer_SDL.cpp  ViciGuiHost.cpp
ViciClient/src/Handlers/: KeyboardInputHandler.cpp  MouseInputHandler.cpp
ViciClient/src/JSRuntime/: AbstractPlayerJSWrapper.cpp  ClientPlayerJSWrapper.cpp  ClientScriptLoader.cpp  NetworkedPlayerJSWrapper.cpp
ViciClient/src/Levels/: Level.cpp  MapLevel.cpp  SingleLevel.cpp
ViciClient/src/Networking/: AssetManager.cpp  ClientPlayerManager.cpp  LevelWatchingManager.cpp  UdpClient.cpp
ViciClient/src/Scenes/: GameScene.cpp  LoginScene.cpp  Scene.cpp  SceneManager.cpp
ViciCore/include/Attributes/: Attributes.hpp
ViciCore/include/Entities/: Entity.hpp
ViciCore/include/JSRuntime/: Script.hpp  ScriptLoader.hpp
ViciCore/include/Networking/: AssetTransfer.hpp  SimplePacket.hpp  UdpChannels.hpp  UdpHost.hpp
ViciCore/include/Utility/: base64.hpp
ViciCore/src/Attributes/: Attributes.cpp
ViciCore/src/Entities/: Entity.cpp
ViciCore/src/JSRuntime/: Script.cpp  ScriptLoader.cpp
ViciCore/src/Networking/: AssetTransfer.cpp  SimplePacket.cpp  UdpHost.cpp
ViciCore/src/Utility/: AssetCache.cpp  TryLockGuard.cpp
ViciEngine/: AssetCache.cpp  AssetCache.hpp  AssetTransfer.cpp  AssetTransfer.hpp  Attributes.cpp  Attributes.hpp  Entity.h  Entity.hpp  IHasClientW.hpp  Script.cpp  Script.hpp  ScriptLoader.cpp  ScriptLoader.hpp  SimplePacket.cpp  SimplePacket.hpp  StandardFuncs.cpp  StandardFuncs.hpp  Texture.h  TimedCache.hpp  TryLockGuard.cpp  TryLockGuard.hpp  UdpChannels.h  UdpChannels.hpp  UdpHost.cpp  UdpHost.h  UdpHost.hpp  UdpServer.cpp  ViciEngine.vcxproj  ViciEngine.vcxproj.filters  base64.h  base64.hpp  entity.cpp
ViciOnlineSDL2/: ViciClient.h  ViciOnlineSDL2.vcxproj  main.cpp
ViciServer/: AssetBroker.cpp  AssetBroker.h  AssetBroker.hpp  DbAsyncQueryRunner.cpp  DbAsyncQueryRunner.hpp  DbConnectionPool.cpp  DbConnectionPool.hpp  DbJSWrapper.cpp  DbJSWrapper.hpp  PlayerLevelManager.cpp  PlayerLevelManager.hpp  PlayerManager.cpp  PlayerManager.hpp  ServerPlayer.cpp  ServerPlayer.hpp  ServerPlayerJSWrapper.cpp  ServerPlayerJSWrapper.hpp  ServerPlayerManager.cpp  ServerPlayerManager.hpp  ServerScriptLoader.cpp  ServerScriptLoader.hpp  UdpServer.cpp  UdpServer.h  UdpServer.hpp  ViciServer.cpp  ViciServer.h  ViciServer.hpp  ViciServer.vcxproj  ViciServer.vcxproj.filters  main.cpp  serverOptions.json
ViciServer/include/: ViciServer.hpp
ViciServer/include/Database/: DbAsyncQueryRunner.hpp  DbConnectionPool.hpp
ViciServer/include/Entities/: ServerPlayer.hpp
ViciServer/include/JSRuntime/: DbJSWrapper.hpp  ServerPlayerJSWrapper.hpp  ServerScriptLoader.hpp
ViciServer/include/Networking/: AssetBroker.hpp  ServerPlayerManager.hpp  UdpServer.hpp
ViciServer/src/: ViciServer.cpp  main.cpp
ViciServer/src/Database/: DbAsyncQueryRunner.cpp  DbConnectionPool.cpp
ViciServer/src/Entities/: ServerPlayer.cpp
ViciServer/src/JSRuntime/: DbJSWrapper.cpp  ServerPlayerJSWrapper.cpp  ServerScriptLoader.cpp
ViciServer/src/Networking/: AssetBroker.cpp  UdpServer.cpp  (+1 more)
cmake/custom_cmake_files/: LibJsonWindows_CMakeLists.txt  XPlatCppSdkWindows_CMakeLists.txt
cmake/toolchains/: clang-windows-port-specialization.cmake  clang-windows-toolchain.cmake
cmake/triplets/: x64-windows-clang.cmake
docs/: dev-setup.md
header_wrappers/: enet_wrapper.h  playfab_wrapper.h  rmlui_wrapper.h  sdl_wrapper.h  v8_wrapper.h  v8pp_wrapper.h  windows_wrapper.h
include/: v8-platform.h
include/v8pp/: class.ipp  config.hpp  version.ipp
(+14 files in other folders)
